--- a/plant_listener/device/CMakeLists.txt
+++ b/plant_listener/device/CMakeLists.txt
@@ -10,6 +10,19 @@
 # @author: BrittanyMueller
 #
 
+# Headers for both devices and using devices.
+add_library(plant-listener-device_headers INTERFACE)
+target_include_directories(plant-listener-device_headers INTERFACE ${CMAKE_SOURCE_DIR}/include/)
+
+# Build device object library
+add_library(plant-listener-device_objlib
+    src/device_loader.cpp
+)
+target_link_libraries(plant-listener-device_objlib 
+    PUBLIC plant-listener-device_headers
+)
+
+
 # Only build the mock sensor if we aren't on actual hardware
 add_subdirectory(mock)
 if(NOT ${CMAKE_BUILD_TYPE} STREQUAL "test")
