--- a/plant_listener/device/CMakeLists.txt
+++ b/plant_listener/device/CMakeLists.txt
@@ -11,15 +11,17 @@
 #
 
 # Headers for both devices and using devices.
-add_library(plant-listener-device_headers INTERFACE)
-target_include_directories(plant-listener-device_headers INTERFACE ${CMAKE_SOURCE_DIR}/include/)
+add_library(plantlistener-device_headers INTERFACE)
+target_include_directories(plantlistener-device_headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
 # Build device object library
-add_library(plant-listener-device_objlib
+add_library(plantlistener-device_objlib
     src/device_loader.cpp
+    src/device.cpp
 )
-target_link_libraries(plant-listener-device_objlib 
-    PUBLIC plant-listener-device_headers
+target_link_libraries(plantlistener-device_objlib 
+    PUBLIC plantlistener-device_headers
+    PRIVATE json
 )
 
 
