WIP common class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,10 @@ if("${CMAKE_BUILD_TYPE}" STREQUAL "test")
 endif()
 
 add_subdirectory(idl)
-add_subdirectory(plant_listener)
+
+if(NOT "$ENV{BUILD_PLANT_LISTENER}" STREQUAL "0")
+    add_subdirectory(plant_listener)
+endif()
 
 add_custom_target(PlantTracker
     COMMAND mkdir -p ${CMAKE_SOURCE_DIR}/app
