--- a/plant_listener/CMakeLists.txt
+++ b/plant_listener/CMakeLists.txt
@@ -31,13 +31,19 @@ target_include_directories(json INTERFACE ${nlohmann_json_SOURCE_DIR}/single_inc
 find_package(spdlog REQUIRED)
 find_package(fmt REQUIRED)
 
-add_compile_options(-g -Wall)
+if("${CMAKE_BUILD_TYPE}" STREQUAL "test" OR "${CMAKE_BUILD_TYPE}" STREQUAL "coverage")
+    add_compile_options(-g -Wall -fprofile-arcs -ftest-coverage)
+    link_libraries(gcov)
+elseif("${CMAKE_BUILD_TYPE}" STREQUAL "debug")
+    add_compile_options(-g -Wall)
+elseif("${CMAKE_BUILD_TYPE}" STREQUAL "release")
+    add_compile_options(-Wall -Werror -O3)
+endif()
 
 add_subdirectory(devices)
 add_subdirectory(client)
 add_subdirectory(core)
 add_subdirectory(util)
-
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "test")
     include(GoogleTest)
