--- a/android/plant_tracker/app/src/main/AndroidManifest.xml
+++ b/android/plant_tracker/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.PlantTracker"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ViewPlants"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
