--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     // examples/advanced need this for JsonFormat
     implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
 
+    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
+
     // Use JUnit test framework.
     testImplementation libs.junit
 
