--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -56,6 +56,9 @@ protobuf {
 }
 
 dependencies {
+    // For loading images from URLs
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
