--- a/idl/CMakeLists.txt
+++ b/idl/CMakeLists.txt
@@ -14,8 +14,18 @@ include(FindProtobuf)
 find_package(Protobuf REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 
+find_package(absl REQUIRED)
+
+# It seems sometimes this is needed in the case of our build server but locally it isn't so if it isn't found ignore.
+find_package(utf8_range QUIET)
+if (${utf8_range_FOUND})
+set(utf8_range_libs utf8_range::utf8_validity)
+else()
+    message(WARNING "utf8_range wasn't found if the build fails you may need to install it for protobufs.")
+endif()
+
 add_library(plant_tracker_idl planttracker.proto)
-target_link_libraries(plant_tracker_idl PUBLIC gRPC::grpc++)
+target_link_libraries(plant_tracker_idl PUBLIC gRPC::grpc++ protobuf::libprotobuf absl::check absl::flags absl::flags_parse absl::log ${utf8_range_libs})
 target_include_directories(plant_tracker_idl PUBLIC ${CMAKE_BINARY_DIR}/idl)
 
 protobuf_generate(TARGET plant_tracker_idl)
