--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,5 +14,6 @@
       ]
     }
   },
-  "forwardPorts": [3322]
+  "forwardPorts": [3322, 5432],
+  "postCreateCommand": "service postgresql start"
 }
