WIP adding db connection.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,9 @@
     }
   },
   "forwardPorts": [3322, 5432],
-  "postCreateCommand": "service postgresql start"
+  "postCreateCommand": "service postgresql start",
+
+  "mounts": [
+    "source=planttracker_db,target=/var/lib/postgresql,type=volume"
+  ]
 }
