--- a/server/app/build.gradle
+++ b/server/app/build.gradle
@@ -92,7 +92,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'planttracker.server.App'
     }
-    archiveBaseName.set("planttracker")
+    archiveBaseName.set("plant-tracker")
 
     // TODO figure out why this worked. nvm only includes some
     from {
