--- a/idl/CMakeLists.txt
+++ b/idl/CMakeLists.txt
@@ -13,18 +13,24 @@
 include(FindProtobuf)
 find_package(Protobuf REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
-find_package(absl REQUIRED)
 
 # It seems sometimes this is needed in the case of our build server but locally it isn't so if it isn't found ignore.
 find_package(utf8_range QUIET)
 if (${utf8_range_FOUND})
-set(utf8_range_libs utf8_range::utf8_validity)
+    set(utf8_range_libs utf8_range::utf8_validity)
 else()
     message(WARNING "utf8_range wasn't found if the build fails you may need to install it for protobufs.")
 endif()
 
+find_package(absl QUIET)
+if (${absl_FOUND})
+    set(absl_libs absl::check absl::flags)
+else()
+    message(WARNING "absl not found if build fails you may needs this.")
+endif()
+
 add_library(plant_tracker_idl planttracker.proto)
-target_link_libraries(plant_tracker_idl PUBLIC gRPC::grpc++ protobuf::libprotobuf absl::check absl::flags ${utf8_range_libs})
+target_link_libraries(plant_tracker_idl PUBLIC gRPC::grpc++ protobuf::libprotobuf ${absl_libs} ${utf8_range_libs})
 target_include_directories(plant_tracker_idl PUBLIC ${CMAKE_BINARY_DIR}/idl)
 
 protobuf_generate(TARGET plant_tracker_idl)
