--- a/plant_listener/core/CMakeLists.txt
+++ b/plant_listener/core/CMakeLists.txt
@@ -14,7 +14,9 @@
 add_library(plantlistener-core_objlib
     src/device_loader.cpp
     src/sensor.cpp
+    src/sensor_config.cpp
     src/plant_listener.cpp
+    src/plant_listener_config.cpp
 )
 target_link_libraries(plantlistener-core_objlib PUBLIC plantlistener-device_objlib plantlistener-util_objlib json plant_tracker_idl)
 target_include_directories(plantlistener-device_objlib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
