Added config parsing and wip custom exceptions.

--- a/server/app/src/main/resources/config.json
+++ b/server/app/src/main/resources/config.json
@@ -6,9 +6,9 @@
     "planttracker": {
         "host": "127.0.0.1",
         "port": 5050,
-        "postgres-host": "jdbc:postgresql://127.0.0.1/",
-        "postgres-user": "postgres",
-        "postgres-pass": "planttracker",
-        "postgres-db": "planttracker"
+        "db-host": "jdbc:postgresql://127.0.0.1/",
+        "db-user": "postgres",
+        "db-pass": "planttracker",
+        "db-name": "planttracker"
     }
 }
