--- a/plant_listener/util/CMakeLists.txt
+++ b/plant_listener/util/CMakeLists.txt
@@ -14,5 +14,5 @@ add_library(plantlistener-util_objlib OBJECT
     src/error.cpp
 )
 target_include_directories(plantlistener-util_objlib PUBLIC include)
-target_link_libraries(plantlistener-util_objlib PUBLIC spdlog::spdlog fmt::fmt)
+target_link_libraries(plantlistener-util_objlib PUBLIC spdlog::spdlog fmt::fmt json)
 
