[Plantlistener] Listener to server handshake
Description:
- Adds id back to plant and removes name
- Changes device to take a type
- Adds init giving device, and receiving plants

Testing:
- None will add unit tests later

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
       ]
     }
   },
-  "forwardPorts": [3322, 5432],
+  "forwardPorts": [5050, 5051, 5432],
   "postCreateCommand": "service postgresql start",
 
   "mounts": [
