--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ Build Plant Tracker Server:
     - ./gradlew jar
     - mkdir -p ../out
     - mv app/build/libs/plant-tracker.jar ../out
+    - cp app/src/main/resources/config.json ../out
   artifacts:
     paths:
       - out/
