Create driver for ADS7830, and general cleanup.
Added some more unit tests

ran clang format

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
     }
   },
   "forwardPorts": [5050, 5051, 5432],
-  "postCreateCommand": "service postgresql start",
+  "postStartCommand": "service postgresql start",
 
   "mounts": [
     "source=planttracker_db,target=/var/lib/postgresql,type=volume"
