--- a/plant_listener/devices/ADS7830/CMakeLists.txt
+++ b/plant_listener/devices/ADS7830/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# (C) Copyright 2023 Brittany Mueller and Larry Milne (https://www.larrycloud.ca)
+# (C) Copyright 2023-2024 Brittany Mueller and Larry Milne (https://www.larrycloud.ca)
 #
 # This code is distributed on "AS IS" BASIS,
 # WITHOUT WARRANTINES OR CONDITIONS OF ANY KIND.
@@ -9,3 +9,8 @@
 # @author: qawse3dr a.k.a Larry Milne
 # @author: BrittanyMueller
 #
+
+add_subdirectory(lib)
+
+add_executable(ads7830_tester main.cpp)
+target_link_libraries(ads7830_tester ads7830)
