--- a/plant_listener/test/CMakeLists.txt
+++ b/plant_listener/test/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(live)
 add_custom_target(plantlistener_coverage
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
     COMMAND mkdir -p coverage
-    COMMAND gcovr -r "${CMAKE_SOURCE_DIR}"  --txt --print-summary --gcov-ignore-parse-errors --filter ".*plant_listener.*" --gcov-exclude ".*test.*" --cobertura coverage.xml --html-details coverage/index.html
+    COMMAND gcovr -r "${CMAKE_SOURCE_DIR}"  --txt --print-summary --gcov-ignore-parse-errors --filter ".*plant_listener.*" --exclude ".*test.*" --cobertura coverage.xml --html-details coverage/index.html
     )
 
 
