--- a/plant_listener/data/config.json
+++ b/plant_listener/data/config.json
@@ -10,7 +10,7 @@
     "sensors": [
         {
             "type": "light",
-            "device": "dev1",
+            "device": "DEVTEST",
             "port": 1
         },
         {
@@ -26,7 +26,7 @@
     "devices": {
         "instances": [
             {
-                "name": "dev1",
+                "name": "DEVTEST",
                 "type": "ADC",
                 "lib": "mock_dev",
                 "ports" : 8,
