Added plant tracker requests to protobuf and created stubs.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
         "vscjava.vscode-java-pack",
         "eamodio.gitlens",
         "vscjava.vscode-gradle",
-        "mutantdino.resourcemonitor"
+        "mutantdino.resourcemonitor",
+        "zxh404.vscode-proto3"
       ]
     }
   },
