Implemented wip get plant by id grpc and client call.

--- a/android/plant_tracker/app/build.gradle
+++ b/android/plant_tracker/app/build.gradle
@@ -40,6 +40,7 @@ protobuf {
         grpc { artifact = 'io.grpc:protoc-gen-grpc-java:1.60.0' // CURRENT_GRPC_VERSION
         }
     }
+    sourceSets.main.proto.srcDir("../../../idl")
 
     generateProtoTasks {
         all().each { task ->
