Updated Mac to uuid.
DESCRIPTION:
- now plantlisteners will use uuid to be identified and it is generated
  on first launch if not already found in the config.
- Also fixed a bug where the server would go into a spinlock because
  java queue are dumb and apparently the concurrent queue is nonblocking...

TESTING:
-

--- a/plant_listener/core/CMakeLists.txt
+++ b/plant_listener/core/CMakeLists.txt
@@ -18,5 +18,5 @@ add_library(plantlistener-core_objlib
     src/plant_listener.cpp
     src/plant_listener_config.cpp
 )
-target_link_libraries(plantlistener-core_objlib PUBLIC plantlistener-device_objlib plantlistener-util_objlib json plant_tracker_idl)
+target_link_libraries(plantlistener-core_objlib PUBLIC plantlistener-device_objlib plantlistener-util_objlib json plant_tracker_idl uuid)
 target_include_directories(plantlistener-device_objlib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
