--- a/plant_listener/CMakeLists.txt
+++ b/plant_listener/CMakeLists.txt
@@ -2,7 +2,7 @@
 # (C) Copyright 2023 Brittany Mueller and Larry Milne (https://www.larrycloud.ca)
 #
 # This code is distributed on "AS IS" BASIS,
-# WITHOUT WARRANTINES OR CONDITIONS OF ANY KIND.
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND.
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
